Adding comments 'n' stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ target_include_directories(vka PUBLIC include)
 add_subdirectory(external_libs)
 add_subdirectory(src)
 target_link_libraries(VMAUsage PUBLIC GPUOpen::VulkanMemoryAllocator)
-target_link_libraries(vka PRIVATE GPUOpen::VulkanMemoryAllocator)
+target_link_libraries(vka PUBLIC GPUOpen::VulkanMemoryAllocator)
 find_package(glfw3 REQUIRED)
 find_package(Vulkan REQUIRED)
 target_link_libraries(vka PRIVATE Vulkan::Vulkan)
