--- a/src/vulkan_abs/CMakeLists.txt
+++ b/src/vulkan_abs/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.13)
 
 project(vka)
 
-target_sources(vka PRIVATE devices.c commands.c pipelines.c swapchain.c)
+target_sources(vka PRIVATE devices.c commands.c pipelines.c swapchain.c render_passes.c)
