--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ find_package(glfw3 REQUIRED)
 find_package(Vulkan REQUIRED)
 target_link_libraries(vka PRIVATE Vulkan::Vulkan)
 target_link_libraries(vka PRIVATE VMAUsage)
+target_link_libraries(vka PUBLIC cvec)
